# switchboard-plug-machineinfo

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  MachineInfoIcon.vala
data/: org.pantheon.switchboard.machine-info.policy.cmake
po/: ko.po
src/: AvatarDialog.vala  AvatarPopover.vala  CMakeLists.txt  CropView.vala  DBusInterfaces.vala  MachineInfo.vala  Permission.vala  Plug.vala  ServiceRestarter.vala
